@@ -3,6 +3,8 @@ Changelog
 
 9.5.dev0 - (unreleased)
 -----------------------
+* Change: Mark data provenance fields as required
+  [szabozo0 refs #25341]
 
 9.4 - (2015-05-05)
 ------------------
